[package]
name = "ps-launcher"
version = "0.1.0"
edition = "2021"
authors = ["PS-Launcher Contributors"]
description = "A minimal, secure PowerShell script launcher written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/ps-launcher"

[dependencies]
# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_System_SystemServices",
] }

[profile.release]
# Aggressive size optimization
opt-level = "z"           # Optimize aggressively for size
lto = true                # Enable Link Time Optimization
codegen-units = 1         # Single codegen unit for best optimization
strip = true              # Strip symbols from binary
panic = "abort"           # Smaller panic implementation (no unwinding)
overflow-checks = false   # Disable overflow checks in release

[profile.dev]
# Development profile with full debug info
opt-level = 0
debug = true

[[bin]]
name = "ps-launcher"
path = "src/main.rs"
